# cosmic-soundcloud

./: CLAUDE.md  Cargo.toml  README.md  com.github.orta.cosmic-soundcloud.json  justfile
.github/workflows/: ci.yml  flatpak-repo.yml  release.yml
i18n/en/: cosmic_soundcloud.ftl
resources/: com.github.orta.cosmic-soundcloud.desktop  com.github.orta.cosmic-soundcloud.metainfo.xml
scripts/: release.sh
src/: app.rs  config.rs  keyring.rs  main.rs
src/api/: client.rs  mod.rs  types.rs
src/audio/: cache.rs  hls.rs  mod.rs  player.rs  system_volume.rs  webview_player.rs  ytdlp.rs
