[package]
name = "cosmic-soundcloud"
version = "0.3.0"
edition = "2024"
license = "MPL-2.0"
description = "Soundcloud for COSMIC folks"
repository = "https://github.com/pop-os/cosmic-app-template"

[dependencies]
futures-util = "0.3.31"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
open = "5.3.2"
rust-embed = "8.8.0"
tokio = { version = "1.48.0", features = ["full"] }

# SoundCloud API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio playback (requires libasound2-dev: sudo apt install libasound2-dev)
rodio = { version = "0.19", default-features = false, features = ["symphonia-all"] }
stream-download = { version = "0.8", features = ["reqwest-rustls"] }

# HLS streaming
m3u8-rs = "6"

# Utilities
parking_lot = "0.12"

# Secure credential storage
keyring = "3"
urlencoding = "2.1.3"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # About widget for the app
    "about",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
